Break in word for long dataset titles. Fixes #5

--- a/ckanext/showcase/public/ckanext_showcase.css
+++ b/ckanext/showcase/public/ckanext_showcase.css
@@ -41,3 +41,7 @@ td.ckanext_showcase_pagination_footer {
     margin: 0;
     border-top: none 0;
 }
+
+.module-narrow .nav-item > a {
+    word-break: break-word;
+}
